--- a/omarCss.css
+++ b/omarCss.css
@@ -59,10 +59,11 @@ section {
     min-height: 100vh;
     display: flex;
     align-items: center;
-    background: url(image/website\ logo1-02.jpg) no-repeat;
+    background-color: #630000;
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
+    padding: 20em 0 20em 0;
 }
 .main h2 {
     color: #fff;
@@ -266,3 +267,4 @@ transform: scale(1.1);
         font-size: 10x;
     }
 }
+
